app/assets/stylesheets/artists.scss
.artist-title{
  font-family: 'Permanent Marker', cursive;

}

h4.artist-title{
  margin-bottom: 10px;
}
.artist-title a{
  color: black;
}

.right{
  float: right;
  margin-right: 550px;
}


#displayMural{
  float: left;
  margin-right: 300px;
}

#newMuralForm{
  padding-bottom: 100px;
  padding-left: 20px;
}
.black{
  color: black
}

